[package]
name = "proxy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
rustls = "0.21"
tokio-rustls = "0.24"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
url = "2.3"
futures = "0.3"
bytes = "1.4"
tokio-util = { version = "0.7", features = ["io"] }
percent-encoding = "2.2"
httpdate = "1.0"
rustls-pemfile = "1.0"
base64 = "0.21"